flapivor/tests/m3/hopix/typechecker/good/54-sequence.hopix
val x : Ref<Int> = ref (0)

val main : Int =
    x := 1;
    !x