flapivor/tests/m3/hopix/typechecker/bad/70-type-annotation.hopix
val main : Int = (0 : String)